[gd_scene load_steps=9 format=3 uid="uid://76ejl251mo3p"]

[ext_resource type="Script" uid="uid://cmapxm252a6d1" path="res://Scripts/Menu.gd" id="1_fhep6"]
[ext_resource type="Texture2D" uid="uid://bwab3yqafkhjg" path="res://Assets/Rocky Roads/Deco/water_a_8frames.png" id="2_blsbb"]
[ext_resource type="Texture2D" uid="uid://bqpu6hnaao1j5" path="res://Assets/Rocky Roads/Deco/water_b_5 frames.png" id="3_mgf83"]
[ext_resource type="Texture2D" uid="uid://qguteiosvypu" path="res://Assets/Rocky Roads/Backgrounds/mountains_a.png" id="4_w1ooi"]
[ext_resource type="Texture2D" uid="uid://dag2laqema4aq" path="res://Assets/Rocky Roads/Backgrounds/trees.png" id="5_hvlmb"]
[ext_resource type="Texture2D" uid="uid://dl4rwkfk0m5wf" path="res://Assets/Rocky Roads/Backgrounds/clouds.png" id="6_1rffg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blsbb"]
bg_color = Color(0.483706, 0.476605, 0.940767, 0.486275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgf83"]
bg_color = Color(0.482353, 0.478431, 0.941176, 0.486275)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 2.0
offset_right = 15.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhep6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.341146
anchor_top = 0.278549
anchor_right = 0.658854
anchor_bottom = 0.721451
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_blsbb")
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_mgf83")
text = "Quit"

[node name="CieloAzul" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
position = Vector2(613, -9)
scale = Vector2(5.32422, 32.7188)
texture = ExtResource("2_blsbb")

[node name="nube" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 2
position = Vector2(620, 187)
scale = Vector2(16.95, 22.9375)
texture = ExtResource("3_mgf83")

[node name="MountainsA" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
position = Vector2(615, 302)
scale = Vector2(5.34766, 4.58594)
texture = ExtResource("4_w1ooi")

[node name="Trees" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(611, 397)
scale = Vector2(5.3125, 4.67969)
texture = ExtResource("5_hvlmb")

[node name="nube2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(597, 601)
scale = Vector2(5.31641, 4)
skew = -0.977384
texture = ExtResource("6_1rffg")

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
